package com.example.patientinterface;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

import com.example.R;

public class ListaDoctori extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_lista_doctori);
    }
}